# how-to-build-your-own-mcp

./: Calculator_MCP_Examples.md  Calculator_MCP_Server.md  DevBlog_MCP_Examples.md  DevBlog_MCP_Server.md  ImageGenerator_MCP_Examples.md  ImageGenerator_MCP_Server.md  MCP_Slides_Presentation.md  SSE_MCP_Examples.md  SSE_MCP_Server.md  UltraMinimal_MCP_Examples.md  UltraMinimal_MCP_Server.md  index.md  live_session_script.md  points.md  readme.md
mcp_client/: .env.example  .gitignore  README.md  client.py  langchain_client.py  logging_utils.py  minimal_client.py  pyproject.toml  watch_payloads.py
sse_server/: main.py  pyproject.toml
stdio_mcp_server/: FastMcp.Dockerfile  calculatorMcp.Dockerfile  calculator_mcp_server.py  devBlogMcp.Dockerfile  dev_blog_mcp_server.py  fast_mcp_server.py  imageGeneratorMcp.Dockerfile  image_generator_mcp_server.py  pyproject.toml  server.py  simple_calculator_server.py  ultra_minimal_server.py
